--- a/재귀/재귀.md
+++ b/재귀/재귀.md
@@ -1,32 +1,37 @@
-재귀
+## **재귀**
 
-자기 자신을 호출하는 것
+- 자기 자신을 호출하는 것
+  <br><br>
 
-재귀 함수
+## **재귀 함수**
 
-자기 자신을 호출하는 함수
+- 자기 자신을 호출하는 함수
+  <br><br>
 
-재귀를 알아야 하는 이유
+## **재귀를 알아야 하는 이유**
 
 - 재귀는 많은 곳에 사용됨
 - JSON.parse, JSON.stringify 재귀적으로 작성됨
 - DOM 순회 알고리즘 (DOM은 모든 요소가 중첩된 트리 구조로 되어 있음)
-- 재귀 없이 작성하는것이 보통은 깔끔하지만 재귀가 더 깔끔한 경우도 있음
 - 여러 알고리즘에 많이 들어가있음
+- 재귀 없이 작성하는것이 보통은 깔끔하지만 재귀가 더 깔끔한 경우도 있음
+  <br><br>
 
-  **주의사항**
+## **주의사항**
 
-  - 종료 조건이 없는 것
-  - 값을 반환하는 것을 잊는 것
-  - 잘못된 값을 반환하는 것
+- 종료 조건이 없는 것
+- 값을 반환하는 것을 잊는 것
+- 잘못된 값을 반환하는 것
 
-  -> 최대 호출 스택 크기 초과
+-> 최대 호출 스택 크기 초과
+<br><br>
 
-## 예제) 팩토리얼
+## 팩토리얼 예제
 
 ```JavaScript
-const factorial = () => {
-  if (num===1) return 1;
-  return num * factorial(num-1);
-}
+const factorial = (n) => {
+  if (n < 0) return 0;
+  if (n <= 1) return 1;
+  return n * factorial(n - 1);
+};
 ```
